# flax-u2net

./: .pre-commit-config.yaml  Makefile  README.md  firstTimeSetup.sh  predict.py  pyproject.toml  train.py
.github/workflows/: pytest.yml
tests/: test_dataset.py  test_u2net.py
u2net/: dataset.py  model.py
