[tool.poetry]
name = "flax-u2net"
version = "0.1.0"
description = "Flax implementation of U-2 Net"
authors = ["dogeplusplus <albertswchung@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
jax = "0.3.5"
optax = "^0.1.2"
flax = "^0.4.1"
tensorflow = "^2.8.0"
einops = "^0.4.1"
tqdm = "^4.64.0"
streamlit = "^1.8.1"
jaxlib = {version = "0.3.5", extras = ["cuda11_cudnn805"]}
tensorflow-addons = "^0.16.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
black = "^22.3.0"
yapf = "^0.32.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
